@@ -13,7 +13,8 @@
 	background: url(../grid/grid_bg.gif) repeat-x;
 }
 .table-row-alt{
-	background-color: #FAFAFA;
+	/*background-color: #FAFAFA;*/
+	background-color:#ededed;
 }
 .item-table tbody td{
 	border-bottom:1px solid #cccccc;
